# cookiecutter-fastapi-starter

./: cookiecutter.json
{{cookiecutter.project_slug}}/: README.md  justfile  pyproject.toml
{{cookiecutter.project_slug}}/src/: server.py
